--- a/src/components/rate-button/rate-button.scss
+++ b/src/components/rate-button/rate-button.scss
@@ -1,6 +1,7 @@
 .rate-button {
+  max-width: 7.5rem;
   width: 100%;
-  height: 24px;
+  height: 1.5rem;
 
   &__star {
     background: $purple-gradient;
