--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -15,19 +15,19 @@ html
       .content-uikit__logo
         +logo({type: "uikit"})
       .content-uikit__color-block
-        +color-intro('color-intro__color-block_dark-shade-100', 'Dark Shade 100%', '#1F2041')
+        +color-intro({color: 'Dark Shade 100%', code: '#1F2041'})
         .content-uikit__color-intro
-          +color-intro('color-intro__color-block_dark-shade-75', 'Dark Shade 75%', '#1F2041')
+          +color-intro({color: 'Dark Shade 75%', code: '#1F2041'})
         .content-uikit__color-intro
-          +color-intro('color-intro__color-block_dark-shade-50', 'Dark Shade 50%', '#1F2041')
+          +color-intro({color: 'Dark Shade 50%', code: '#1F2041'})
         .content-uikit__color-intro
-          +color-intro('color-intro__color-block_dark-shade-25', 'Dark Shade 25%', '#1F2041')
+          +color-intro({color: 'Dark Shade 25%', code: '#1F2041'})
         .content-uikit__color-intro
-          +color-intro('color-intro__color-block_dark-shade-5', 'Dark Shade 5%', '#1F2041')
+          +color-intro({color: 'Dark Shade 5%', code: '#1F2041'})
         .content-uikit__color-intro
-          +color-intro('color-intro__color-block_purple', 'Purple', '#BC9CFF')
+          +color-intro({color: 'Purple', code: '#BC9CFF'})
         .content-uikit__color-intro
-          +color-intro('color-intro__color-block_green', 'Green', '#6FCF97')
+          +color-intro({color: 'Green', code: '#6FCF97'})
       .content-uikit__text-block
         .content-uikit__text-intro-h1
           +text-intro({mod: "h1", text: "This one is the sub-section or widget title"})
@@ -37,8 +37,3 @@ html
           +text-intro({mod: "h3", text: "This is a label or CTA text"})
         .content-uikit__text-intro-body
           +text-intro({mod: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})  
-
-
-      
-      
-    
