--- a/src/components/color-intro/color-intro.pug
+++ b/src/components/color-intro/color-intro.pug
@@ -1,7 +1,16 @@
-include __color-block/color-intro__color-block.pug
-include __label/color-intro__label.pug
-
-mixin color-intro(colormod, color, code)
+mixin color-intro(options)
+  -
+    var colorClass = "color-intro__color-block"
+    var color = options.color
+    colorClass += color == "Dark Shade 100%" ? " color-intro__color-block_dark-shade-100" : ""
+    colorClass += color == "Dark Shade 75%" ? " color-intro__color-block_dark-shade-75" : ""
+    colorClass += color == "Dark Shade 50%" ? " color-intro__color-block_dark-shade-50" : ""
+    colorClass += color == "Dark Shade 25%" ? " color-intro__color-block_dark-shade-25" : ""
+    colorClass += color == "Dark Shade 5%" ? " color-intro__color-block_dark-shade-5" : ""
+    colorClass += color == "Purple" ? " color-intro__color-block_purple" : ""
+    colorClass += color == "Green" ? " color-intro__color-block_green" : ""
   .color-intro
-    +color-block(colormod)
-    +label(color, code)
+    div(class=colorClass)
+    .color-intro__label
+      p.color-intro__label.color-intro__label_head= options.color
+      p.color-intro__label.color-intro__label_code= options.code
