--- a/src/components/color-intro/color-intro.scss
+++ b/src/components/color-intro/color-intro.scss
@@ -1,30 +1,31 @@
 .color-intro {
   display: flex;
-  width: 269.26px;
+  max-width: 16.8588rem;
+  width: 100%;
 
   &__label {
     font-size: 1.1875rem;
     line-height: 1.8125rem;
     margin: 0;
-    font-family: Quicksand, "Open Sans", Arial, sans-serif;
+    font-family: $quicksand;
 
     &_head {
       font-weight: bold;
-      padding-top: 7px;
-      padding-left: 40px;
+      padding-top: 0.4375rem;
+      padding-left: 2.5rem;
     }
 
     &_code {
       text-transform: uppercase;
       font-weight: normal;
-      padding-left: 40px;
+      padding-left: 2.5rem;
     }
   }
 
   &__color-block {
-    width: 70px;
-    height: 70px;
-    border-radius: 6px;
+    width: 4.375rem;
+    height: 4.375rem;
+    border-radius: 0.375rem;
     background: $dark100;
 
     &_dark-shade-5 {
