--- a/src/pages/colors-and-type.pug
+++ b/src/pages/colors-and-type.pug
@@ -30,10 +30,10 @@ html
           +color-intro({color: 'Green', code: '#6FCF97'})
       .content-uikit__text-block
         .content-uikit__text-intro-h1
-          +text-intro({mod: "h1", text: "This one is the sub-section or widget title"})
+          +text-intro({type: "h1", text: "This one is the sub-section or widget title"})
         .content-uikit__text-intro-h2
-          +text-intro({mod: "h2", text: "Next one is the item title inside widgets"})
+          +text-intro({type: "h2", text: "Next one is the item title inside widgets"})
         .content-uikit__text-intro-h3
-          +text-intro({mod: "h3", text: "This is a label or CTA text"})
+          +text-intro({type: "h3", text: "This is a label or CTA text"})
         .content-uikit__text-intro-body
-          +text-intro({mod: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})  
+          +text-intro({type: "body", text: "This is the body text which is used for most of the design, like paragraphs, lists, etc."})  
