--- a/src/components/text-intro/text-intro.scss
+++ b/src/components/text-intro/text-intro.scss
@@ -1,7 +1,73 @@
-@import '__text-label/text-intro__text-label.scss';
-@import '__text-tag/text-intro__text-tag.scss';
-
 .text-intro {
   display: flex;
-  width: 403px;
+  max-width: 25.1875rem;
+  min-width: 20rem;
+  width: 100%;
+
+  &__text-tag {
+    font-family: $montserrat;
+    ;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    color: $dark25;
+    margin: 0;
+    text-align: right;
+
+    &_h3 {
+      font-size: 0.75rem;
+      line-height: 0.9375rem;
+      text-transform: uppercase;
+    }
+
+    &_h2 {
+      font-size: 1.1875rem;
+      line-height: 1.5rem;
+      text-transform: uppercase;
+    }
+
+    &_h1 {
+      font-size: 1.5rem;
+      line-height: 1.875rem;
+      text-transform: uppercase;
+    }
+  }
+
+  &__text-label {
+    font-family: $montserrat;
+    ;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    color: $dark75;
+    margin: 0;
+    margin-left: 30px;
+
+    &_h3 {
+      font-family: $montserrat;
+      font-weight: bold;
+      font-size: 0.75rem;
+      line-height: 0.9375rem;
+      text-transform: uppercase;
+      color: $dark100;
+    }
+
+    &_h2 {
+      font-family: $quicksand;
+      font-weight: bold;
+      font-size: 1.1875rem;
+      line-height: 1.5rem;
+      color: $dark100;
+    }
+
+    &_h1 {
+      font-family: $quicksand;
+      font-weight: bold;
+      font-size: 1.5rem;
+      line-height: 1.875rem;
+      color: $dark100;
+    }
+  }
 }
