started room info block

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -4,6 +4,7 @@ include ../components/bullet-list/bullet-list.pug
 include ../components/radio/radio.pug
 include ../components/toggle/toggle.pug
 include ../components/rate-button/rate-button.pug
+include ../components/room-info/room-info.pug
 doctype
 html
   head
@@ -24,3 +25,6 @@ html
     +rate-button({rate: "4"})
 
     +bulletList
+
+    +room-info
+    div.material-icons 
