--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -8,3 +8,4 @@
 @import '../components/radio/radio.scss';
 @import '../components/toggle/toggle.scss';
 @import '../components/rate-button/rate-button.scss';
+@import '../components/room-info/room-info.scss';
