--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -5,6 +5,7 @@ include ../components/radio/radio.pug
 include ../components/toggle/toggle.pug
 include ../components/rate-button/rate-button.pug
 include ../components/room-info/room-info.pug
+include ../components/button/button.pug
 doctype
 html
   head
