--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -9,3 +9,4 @@
 @import '../components/toggle/toggle.scss';
 @import '../components/rate-button/rate-button.scss';
 @import '../components/room-info/room-info.scss';
+@import '../components/button/button.scss';
