--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -28,3 +28,10 @@ html
     +bulletList
 
     +room-info
+
+    +button({text: 'Click me', 
+            isRegister: 'false',
+            isRegisterRus: 'false',
+            isWithArrow: 'false',
+            transparent: 'false',
+            isNoBorder: 'true'})
