--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -10,3 +10,4 @@
 @import '../components/rate-button/rate-button.scss';
 @import '../components/room-info/room-info.scss';
 @import '../components/button/button.scss';
+@import '../components/like-button/like-button.scss';
