--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -17,6 +17,7 @@ html
     title Form Elements
     link(rel='stylesheet' href='form-elements.scss')
   body
+    
     +checkboxButtons()
     +richCheckboxButtons()
     +radio({name: 'test1'})
@@ -38,3 +39,4 @@ html
             isNoBorder: 'true'})
     
     +like-button({count: '12'})
+    script(src='form-elements.js')
