--- a/src/components/toggle/toggle.scss
+++ b/src/components/toggle/toggle.scss
@@ -1,49 +1,49 @@
 .toggle {
-  max-width: 266px;
+  max-width: 16.625rem;
 
   // скрытие стандартной метки
   &__input:checked,
   &__input:not(:checked) {
     position: absolute;
-    left: -9999px;
+    left: -624.9375rem;
   }
 
   //отступ и курсор к подписи
-  &__input:checked+.toggle__title,
-  &__input:not(:checked)+.toggle__title {
+  &__input:checked + .toggle__title,
+  &__input:not(:checked) + .toggle__title {
     display: inline-block;
     position: relative;
-    padding-left: 50px;
+    padding-left: 3.125rem;
     cursor: pointer;
   }
 
   //стилизованнй чекбокс
-  &__input:checked+.toggle__title:before,
-  &__input:not(:checked)+.toggle__title:before {
+  &__input:checked + .toggle__title:before,
+  &__input:not(:checked) + .toggle__title:before {
     content: "";
     position: absolute;
-    left: 0px;
-    top: 2px;
-    width: 40px;
-    height: 20px;
-    border: 1px solid $dark25;
+    left: 0rem;
+    top: 0.125rem;
+    width: 2.5rem;
+    height: 1.25rem;
+    border: 0.0625rem solid $dark25;
     box-sizing: border-box;
-    border-radius: 10px;
+    border-radius: 0.625rem;
     background-color: #ffffff;
   }
 
   //рамка чекбокса при нажатии
-  &__input:checked+.toggle__title:before {
-    border: 1px solid $purple;
+  &__input:checked + .toggle__title:before {
+    border: 0.0625rem solid $purple;
   }
 
   //кружочки
-  &__input:checked+.toggle__title:after,
-  &__input:not(:checked)+.toggle__title:after {
+  &__input:checked + .toggle__title:after,
+  &__input:not(:checked) + .toggle__title:after {
     content: "";
     position: absolute;
-    width: 12px;
-    height: 12px;
+    width: 0.75rem;
+    height: 0.75rem;
     border-radius: 100%;
     background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
     -webkit-transition: all 0.2s ease;
@@ -52,16 +52,15 @@
     transition: all 0.2s ease;
   }
 
-  &__input:checked+.toggle__title:after {
-    left: 24px;
-    top: 6px;
+  &__input:checked + .toggle__title:after {
+    left: 1.5rem;
+    top: 0.375rem;
     background: linear-gradient(180deg, #bc9cff 0%, #8ba4f9 100%);
   }
 
-  &__input:not(:checked)+.toggle__title:after {
+  &__input:not(:checked) + .toggle__title:after {
     background: $dark25;
-    left: 4px;
-    top: 6px;
+    left: 0.25rem;
+    top: 0.375rem;
   }
-
 }
