ref like button
added multiple buttons support

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -39,4 +39,6 @@ html
             isNoBorder: 'true'})
     
     +like-button({count: '12'})
+    +like-button({count: '13'})
+    +like-button({count: '-1'})
     script(src='form-elements.js')
