--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -11,3 +11,4 @@
 @import '../components/room-info/room-info.scss';
 @import '../components/button/button.scss';
 @import '../components/like-button/like-button.scss';
+@import '../components/comment/comment.scss';
