added comment block

--- a/src/components/comment/comment.pug
+++ b/src/components/comment/comment.pug
@@ -2,11 +2,12 @@ include ../like-button/like-button.pug
 
 mixin comment(options)
   .comment
-    img(class='comment__image', src='', alt='')
-    .comment__user-info
-      p.comment__user-name
-      p.comment__last-activity
-    +like-button({count: '12'})
-    p.comment__info
-      
-      
+    .comment__person
+      div.comment__image(style=`background-image: url(${options.imageUrl});`)
+      .comment__user-info
+        p.comment__user-name= options.userName
+        p.comment__last-activity= options.lastActivity
+    .comment__review
+      .comment__button
+        +like-button({count: options.likeCount})
+      p.comment__info= options.text
