--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -11,4 +11,4 @@
 @import '../components/room-info/room-info.scss';
 @import '../components/button/button.scss';
 @import '../components/comment/comment.scss';
-@import '../../node_modules/paginationjs/dist/pagination.css'
+@import '../components/pagination/pagination.scss';
