--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,4 +1,5 @@
 mixin pagination(options)
+  .pagination
   //-<div id="data-container"></div>
   <div id="pagination-container"></div>
-  p Рандомный текст
+  p.pagination__label 1 – 12 из 100+ вариантов аренды
