started masked input, ref pagination: deleted console log

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -20,6 +20,8 @@ html
     link(rel='stylesheet' href='form-elements.scss')
     script(src='jquery-for-parcel.js')
     script(src='../../node_modules/paginationjs/dist/pagination.js')
+    script(src='../../node_modules/jquery.maskedinput/src/jquery.maskedinput.js')
+    
   body
     
     +checkboxButtons()
@@ -61,6 +63,11 @@ html
     br
     br
     br
+
+    +text-field({type: "text",
+                 placeholder: "Email" ,
+                 isMasked: 'true',
+                })
 
 
 
