--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -1,2 +1,5 @@
 mixin text-field(options)
-  input(class='text-field', type= options.type, placeholder= options.placeholder)
+  -
+    let className = 'text-field';
+    className += (options.isMasked == 'true') ? ' js-text-field_masked' : '';
+  input(class= className, type= options.type, placeholder= options.placeholder)
