added sub text-field, ref text-field.js - js-class

--- a/src/components/text-field/text-field.pug
+++ b/src/components/text-field/text-field.pug
@@ -3,3 +3,9 @@ mixin text-field(options)
     let className = 'text-field';
     className += (options.isMasked == 'true') ? ' js-text-field_masked' : '';
   input(class= className, type= options.type, placeholder= options.placeholder)
+
+mixin sub-text-field(options)
+  .sub-text-field
+    form.sub-text-field__form(action='get', link='${options.link}')
+      +text-field({type: options.type, isMasked: options.isMasked, placeholder: options.placeholder})
+      button.sub-text-field__button.material-icons arrow_forward
