--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -61,12 +61,19 @@ html
     br
     br
     br
-
+    
     +text-field({type: "text",
                  placeholder: "ДД.ММ.ГГГГ" ,
                  isMasked: 'true',
                 })
 
+    br
+    br
+    br
+    +sub-text-field({type: 'email', placeholder: 'Email', isMasked: 'false', link: 'fake.html'})
+    br
+    br
+    br
 
 
 
