--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -12,3 +12,4 @@
 @import '../components/button/button.scss';
 @import '../components/comment/comment.scss';
 @import '../components/pagination/pagination.scss';
+@import '../components/slider/slider.scss';
