--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -13,3 +13,4 @@
 @import '../components/comment/comment.scss';
 @import '../components/pagination/pagination.scss';
 @import '../components/slider/slider.scss';
+@import '../components/exp-checkbox/exp-checkbox.scss';
