--- a/src/components/checkbox-button/checkbox-button.pug
+++ b/src/components/checkbox-button/checkbox-button.pug
@@ -5,7 +5,7 @@ mixin checkbox-button(options)
     checkTitleClass += rich == "true" ? " checkbox-button__title_rich" : ""
   .checkbox-button
     label.checkbox-button__label
-      input(class='checkbox-button__input', type='checkbox', name=options.name, value=options.value)
+      input(class='checkbox-button__input', type='checkbox', name=options.name, value=options.value, checked=options.checked)
       span(class=checkTitleClass) #{options.label}
       case rich
         when "true"
