--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -14,3 +14,4 @@
 @import '../components/pagination/pagination.scss';
 @import '../components/slider/slider.scss';
 @import '../components/exp-checkbox/exp-checkbox.scss';
+@import '../components/dropdown/dropdown.scss';
