--- a/src/components/dropdown/dropdown.pug
+++ b/src/components/dropdown/dropdown.pug
@@ -7,4 +7,7 @@ mixin dropdown(options)
           .iqdropdown-menu-option(data-id=val)
             div.qdropdown-item-container
               p.iqdropdown-item= val
+        .iqdropdown-footer
+          p.iqdropdown-footer-erase очистить
+          p.iqdropdown-footer-apply применить
 
