--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -27,7 +27,7 @@ html
     div(style="height: 500px; display: flex; justify-content: center; align-items: center;")
       - 
         let dropArrayGuests = [
-          {item: 'Взрослые', id: 'adults', group: 'true',},
+          {item: 'Взрослые', id: 'adults', group: 'false',},
           {item: 'Дети', id: 'kids', group: 'true',},
           {item: 'Младенцы', id: 'babies', group: 'false',},
         ];
