--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -34,3 +34,8 @@ html
       +dropdown({
         items: dropArrayGuests,
       })
+      br
+      br
+      +dropdown({
+        items: dropArrayGuests,
+      })
