--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -15,3 +15,4 @@
 @import '../components/slider/slider.scss';
 @import '../components/exp-checkbox/exp-checkbox.scss';
 @import '../components/dropdown/dropdown.scss';
+@import '../components/date-dropdown/date-dropdown.scss';
