--- a/src/components/date-dropdown/date-dropdown.pug
+++ b/src/components/date-dropdown/date-dropdown.pug
@@ -1,4 +1,4 @@
 mixin date-dropdown(options)
-  .date-dropdown
-    input(type='text' class='js-date-dropdown') 
-    //<input type='text' class="datepicker-here" data-position="right top" />
+    input(type = 'text',
+          class = 'date-dropdown js-date-dropdown'
+    ) 
