--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -1,1 +1,74 @@
-@import '../../node_modules/air-datepicker/dist/css/datepicker.min.css'
+@import '../../node_modules/air-datepicker/dist/css/datepicker.min.css';
+
+.date-dropdown {
+  width: 100%;
+  max-width: 320px;
+
+  &__arrows {
+    color: $purple;
+  }
+}
+
+// настройка внешнего вида
+.datepicker {
+  width: 320px;
+  height: 369px;
+  background: #FFFFFF;
+  border: 1px solid $dark25;
+  box-sizing: border-box;
+  box-shadow: 0px 10px 20px $dark5;
+  border-radius: 4px;
+
+
+  // убрать треугольный pointer, который нацелен на инпут
+  &--pointer {
+    display: none;
+  }
+
+  //панель навигации
+  &--nav {
+    padding: 20px 20.67px 30px 20.2px;
+    border: none;
+
+    &-action {
+      width: 24px;
+    }
+
+    &-title {
+      font-family: $quicksand;
+      font-style: normal;
+      font-weight: bold;
+      font-size: 19px;
+      text-align: center;
+      color: $dark100;
+    }
+  }
+
+  &--content {
+    border: none;
+    padding: 0 19.94px 0 21.2px;
+  }
+
+  &--days-names {
+    margin: 0;
+  }
+
+  &--day-name {
+    width: 39.88px;
+    height: 40px;
+  }
+
+  &--cell {
+    width: 39.88px;
+    height: 40px;
+    font-family: $montserrat;
+    font-size: 12px;
+    line-height: 15px;
+    text-align: center;
+  }
+
+  &--buttons {
+    border: none;
+  }
+
+}
