--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -12,7 +12,6 @@
 // настройка внешнего вида
 .datepicker {
   width: 320px;
-  height: 369px;
   background: #FFFFFF;
   border: 1px solid $dark25;
   box-sizing: border-box;
@@ -128,5 +127,17 @@
 
   &--buttons {
     border: none;
+    padding-top: 20.44px;
+    padding-bottom: 19px;
   }
+
+  &--button {
+    height: 15px;
+    font-family: Montserrat;
+    font-weight: bold;
+    font-size: 12px;
+    text-transform: uppercase;
+    color: $dark50;
+  }
+
 }
