continue date-dropdown
added apply button

--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -138,6 +138,10 @@
     font-size: 12px;
     text-transform: uppercase;
     color: $dark50;
+
+    &-apply {
+      color: $purple;
+    }
   }
 
 }
