--- a/src/pages/form-elements.scss
+++ b/src/pages/form-elements.scss
@@ -16,3 +16,4 @@
 @import '../components/exp-checkbox/exp-checkbox.scss';
 @import '../components/dropdown/dropdown.scss';
 @import '../components/date-dropdown/date-dropdown.scss';
+@import '../components/filter-date-dropdown/filter-date-dropdown.scss';
