continue filter-date-dropdown
added selected dates to 2 inputs

--- a/src/pages/form-elements.pug
+++ b/src/pages/form-elements.pug
@@ -27,4 +27,4 @@ html
     script(src='form-elements.js')
   body
     div(style="height: 500px; display: flex; justify-content: center; align-items: center;")
-      +date-dropdown()
+      +filter-date-dropdown()
