--- a/src/components/filter-date-dropdown/filter-date-dropdown.pug
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.pug
@@ -1,4 +1,4 @@
-mixin date-dropdown(options)
-    input(type = 'text',
-          class = 'date-dropdown js-date-dropdown'
-    ) 
+mixin filter-date-dropdown(options)
+  .filter-date-dropdown
+    input(type = 'text' class = 'date-dropdown js-filter-date-dropdown')
+    input(type = 'text' class = 'filter-date-dropdown__end')
